--- Functionality changes from Asterisk 13.1.0 to Asterisk 13.2.0 ------------
------------------------------------------------------------------------------

chan_pjsip
------------------
 * New 'user_eq_phone' endpoint setting. This adds a 'user=phone' parameter
   to the request URI and From URI if the user is determined to be a phone number.

res_pjsip_config_wizard
------------------
 * This is a new module that adds streamlined configuration capability for
   chan_pjsip.  It's targetted at users who have lots of basic configuration
   scenarios like 'phone' or 'agent' or 'trunk'.  Additional information
   can be found in the sample configuration file at
   config/samples/pjsip_wizard.conf.sample.

ARI
------------------
 * The Originate operation now takes in an originator channel. The linked ID of
   this originator channel is applied to the newly originated outgoing channel.
   If using CEL this allows an association to be established between the two so
   it can be recognized that the originator is dialing the originated channel.

 * "language" (the default spoken language for the channel) is now included in
   the standard channel state output for suitable events.

AMI
------------------
 * "Language" (the default spoken language for the channel) is now included in
   the standard channel state output for suitable events.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.0.0 to Asterisk 13.1.0 ------------
------------------------------------------------------------------------------

AMI
------------------
 * Event NewConnectedLine is emitted when the connected line information on
   a channel changes.

 * The version of AMI has been bumped to 2.6.0 to account for the backwards
   compatible feature listed above.

ARI
------------------
 * Event ChannelConnectedLine is emitted when the connected line information
   on a channel changes.
