@@ -16,6 +16,10 @@ chan_pjsip
  * New 'user_eq_phone' endpoint setting. This adds a 'user=phone' parameter
    to the request URI and From URI if the user is determined to be a phone number.
 
+ * New global setting 'keep_alive_interval'. Setting this to a non-zero value
+   will cause keep alive messages to be sent periodically over connection
+   oriented transports.
+
 res_pjsip_config_wizard
 ------------------
  * This is a new module that adds streamlined configuration capability for
